@startuml Almacen

skinparam classAttributeIconSize 0
skinparam classFontStyle bold
skinparam classBackgroundColor #FFFFEE
skinparam classBorderColor #969696
skinparam arrowColor #4D4D4D
skinparam shadowing false
skinparam stereotypeCBackgroundColor #CCE6FF

skinparam class {
  FontColor #000000
  HeaderBackgroundColor #EAEABD
  BorderThickness 1
}

class Mapa {
  // Clase padre
}

class Almacen {
  -puzle: SortingGridPuzzle
  -puzle2: SwitchPuzzle
  -puzle3: Pipe
  -puzle4: Huella
  -puzle5: CablePuzzle
  -siguienteMapa: Periodico_Almacen
  -posicionamientoInteraccion: PosicionamientoInteraccion
  -posicionamientoInteraccion2: PosicionamientoInteraccion
  -posicionamientoInteraccion3: PosicionamientoInteraccion
  -posicionamientoInteraccion4: PosicionamientoInteraccion
  -posicionamientoInteraccion5: PosicionamientoInteraccion
  -posicionamientoInteraccionHuida: PosicionamientoInteraccion
  -posicionamientoInteracciones: list
  -posicionamientoInteraccionActual: int
  -personajeMovido: boolean
  -huida: boolean
  -puertaAlmacen: ObjetoParaCambiar
  -puertaSala: ObjetoParaCambiar
  -camara: ObjetoParaCambiar
  -cajaFuerte: ObjetoParaCambiar
  -jugador1: Jugador
  -grupoJugadores: Group
  -guardia: GuardiaBanco
  -teclaInteraccion: TeclaInteraccion
  +__init__(director)
  +inicializarTextosMisiones()
  +dibujar(pantalla)
  +eventos(lista_eventos)
  +update(tiempo)
}

class PosicionamientoInteraccion {
  // Clase para posicionar interacciones
}

class ObjetoParaCambiar {
  // Clase para cambiar objetos
}

class Jugador {
  // Clase jugador
}

class GuardiaBanco {
  // Clase guardia
}

class TeclaInteraccion {
  // Clase para mostrar tecla de interacción
}

class SortingGridPuzzle {
  // Clase puzzle
}

class SwitchPuzzle {
  // Clase puzzle
}

class Pipe {
  // Clase puzzle
}

class Huella {
  // Clase puzzle
}

class CablePuzzle {
  // Clase puzzle
}

class Periodico_Almacen {
  // Clase siguiente mapa
}

' Relaciones
Mapa <|-- Almacen
Almacen *-- "1" SortingGridPuzzle : puzle
Almacen *-- "1" SwitchPuzzle : puzle2
Almacen *-- "1" Pipe : puzle3
Almacen *-- "1" Huella : puzle4
Almacen *-- "1" CablePuzzle : puzle5
Almacen *-- "6" PosicionamientoInteraccion : posicionamientoInteracciones
Almacen *-- "4" ObjetoParaCambiar : objetos cambiables
Almacen *-- "1" Jugador : jugador1
Almacen *-- "1" GuardiaBanco : guardia
Almacen *-- "1" TeclaInteraccion : teclaInteraccion
Almacen *-- "1" Periodico_Almacen : siguienteMapa

note top of Almacen
  Mapa del almacén del banco, donde el jugador debe resolver varios puzzles
  para ir avanzando en la misión de robo.
end note

note right of Almacen::posicionamientoInteraccionActual
  Índice de la interacción actual que debe completar el jugador
end note

note right of Almacen::huida
  Indica si el jugador ha alcanzado la fase final de huida
end note

note bottom of Almacen
  El mapa implementa una secuencia de puzzles que el jugador debe resolver en orden:
  1. SortingGridPuzzle para abrir la puerta del almacén
  2. SwitchPuzzle para desactivar la cámara
  3. Puzzle de tuberías para abrir la puerta de la sala
  4. Noquear al guardia y usar su huella para abrir la caja fuerte
  5. CablePuzzle para colocar una bomba y crear una distracción
  6. Huir por el conducto de ventilación
end note

@enduml